Bug 446446 - Elisa pulls the star rating and header icon colors from the wrong color scheme
Summary: Elisa pulls the star rating and header icon colors from the wrong color scheme
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-03 20:58 UTC by Nagy Tibor
Modified: 2021-12-12 22:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.1
Sentry Crash Report:


Attachments
Screenshot (384.45 KB, image/png)
2021-12-03 20:58 UTC, Nagy Tibor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nagy Tibor 2021-12-03 20:58:56 UTC
Created attachment 144183 [details]
Screenshot

SUMMARY
Elisa currently always pulls the star rating widget colors and some view header icon colors from the global color scheme. This is not correct. Elisa should use the color scheme specified at "Hamburger"->"Color Scheme" everywhere in the app, otherwise those icons/widgets may become barely visible if someone uses a light system theme combined with a dark Elisa theme (like me).

The weird thing about those miscolored header icons that only the icon of the startup view and the "Now Playing" view seems to be affected.

I attached a screenshot that makes this easy to spot by using a hideous global color scheme.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.23
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.3
Graphics Platform: X11
Comment 1 Nate Graham 2021-12-04 05:39:11 UTC
Does it fix itself if you restart Elisa?
Comment 2 Nagy Tibor 2021-12-04 13:25:33 UTC
Nope, it does not fix itself on restart.

Also if you look closer at these screenshots on an unrelated GitLab MR this may even be reproducible on Windows:
https://invent.kde.org/multimedia/elisa/-/merge_requests/301#note_346205
Comment 3 Nagy Tibor 2021-12-04 15:22:37 UTC
Even you managed to reproduce this bug in the description of this MR (second screenshot): https://invent.kde.org/multimedia/elisa/-/merge_requests/275
Comment 4 Nate Graham 2021-12-04 15:24:13 UTC
Oh wow I didn't even notice. I have an idea of what the problem might be, and will take a look today or tomorrow.
Comment 5 Bug Janitor Service 2021-12-12 21:21:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/309
Comment 6 Nate Graham 2021-12-12 22:21:57 UTC
Git commit 595f5ca6dd11de165f93f71b84ecc1f5f204ad76 by Nate Graham.
Committed on 12/12/2021 at 21:17.
Pushed by ngraham into branch 'release/21.12'.

Use Kirigami.Icon for icons, rather than Image

This allows various icons to change their color instantly in response
to changes in the active color scheme, and removes a lot of code that
becomes unnecessary after the port is done.
FIXED-IN: 21.12.1

M  +0    -8    src/elisautils.h
M  +0    -4    src/models/viewsmodel.cpp
M  +0    -1    src/models/viewsmodel.h
M  +1    -6    src/qml/ContextView.qml
M  +1    -4    src/qml/MediaTrackMetadataView.qml
M  +1    -7    src/qml/NavigationActionBar.qml
M  +1    -11   src/qml/PlayListEntry.qml
M  +1    -4    src/qml/RatingStar.qml
M  +0    -1    src/qml/ViewSelector.qml
M  +9    -18   src/qml/ViewSelectorDelegate.qml
M  +1    -4    src/qml/mobile/MobileMediaTrackMetadataView.qml
M  +3    -13   src/viewslistdata.cpp
M  +1    -7    src/viewslistdata.h

https://invent.kde.org/multimedia/elisa/commit/595f5ca6dd11de165f93f71b84ecc1f5f204ad76