Use Kirigami.Icon for icons, rather than Image

This allows various icons to change their color instantly in response
to changes in the active color scheme, and removes a lot of code that
becomes unnecessary after the port is done.

BUG: 446446
FIXED-IN: 21.12.1