src/elisautils.h
@@ -61,14 +61,6 @@ enum FilterType {
 
 Q_ENUM_NS(FilterType)
 
-enum IconUseColorOverlay
-{
-    UseColorOverlay = true,
-    DoNotUseColorOverlay = false,
-};
-
-Q_ENUM_NS(IconUseColorOverlay)
-
 }
 
 #endif // ELISAUTILS_H
